--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ img {
 	position: absolute;
   width: 200px;
 	left: 50%;
-	top: 20%;
+	top: 32%;
 	transform: translate(-50%, -50%);
 	font-family: sans-serif;
 	user-select: none;
@@ -25,14 +25,14 @@ img {
       height: 120vh;
       margin: 0;
       background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(1.jpg);
-      background-size: 329px;
-      height: 100vh;
+      background-size: 100%;
+      height: 130vh;
       font-family: Arial, sans-serif;
     }
 
     a {
       margin: 10px;
-      padding: 15px 30px;
+      padding: 15px 50px;
       font-size: 18px;
       cursor: pointer;
       border: none;
