--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ img {
       align-items: center;
       height: 120vh;
       margin: 0;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(1.jpg);
+      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(Background\ Raport.jpg);
       background-size: 100%;
       height: 130vh;
       font-family: Arial, sans-serif;
