--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>L18-F3</title>
   <style>
 
@@ -22,12 +20,11 @@ img {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 120vh;
       margin: 0;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(Background\ Raport.jpg);
-      background-size: 2000%;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(sarbazi.jpg);
+      background-size: cover;
       height: 130vh;
-      font-family: Arial, sans-serif;
+
     }
     a {
       margin: 10px;
