--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ img {
       justify-content: center;
       align-items: center;
       margin: 0;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(sarbazi.jpg);
-      background-size: 100%;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(../وێنە/sarbazi.jpg);
+      background-size: auto;
       height: 130vh;
 
     }
