--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img {
       align-items: center;
       margin: 0;
       background-image: linear-gradient(rgba(0, 0, 0, 0.562),hwb(0 0% 100% / 0.562)), url(../وێنە/sarbazi.jpg);
-      background-size: auto;
+      background-size: 150%;
       height: 130vh;
 
     }
