--- a/2.html
+++ b/2.html
@@ -43,7 +43,7 @@
     const correctPassword = "L18F3111"; // وشەی نهێنی لێرە دابنێ
     const enteredPassword = document.getElementById("password").value;
     if (enteredPassword === correctPassword) {
-      window.location.href = "https://sites.google.com/view/l18f3/%D8%B3%DB%95%D8%B1%DB%95%DA%A9%DB%8C"; // ئەم فایلە پەڕەی ناوخۆیە
+      window.location.href = "https://sites.google.com/view/l18f3?usp=sharing"; // ئەم فایلە پەڕەی ناوخۆیە
     } else {
       alert("وشەی نهێنی هەڵەیە!");
     }
