--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
 
   <div class="text-center space-y-6">
     <!-- Logo -->
-    <img src="فەرمانەکانی بەشی دوو/index/logo.png" alt="Logo" class="mx-auto w-32 h-32 object-contain" />
+    <img src="logo.png" alt="Logo" class="mx-auto w-32 h-32 object-contain" />
 
     <!-- Buttons -->
     <div class="space-x-4">
